force-app/main/default/objects/GlobalSetting__c/GlobalSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger</label>
</CustomObject>