force-app/main/default/objects/GlobalSetting__c/fields/Ignore_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Trigger</label>
    <type>Checkbox</type>
</CustomField>