force-app/main/default/objects/GlobalSetting__c/fields/Ignore_Validation__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Validation</label>
    <type>Checkbox</type>
</CustomField>