force-app/main/default/objects/GlobalSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Ignore_Trigger__c</columns>
    <columns>Ignore_Validation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>